# Speechering

./: .cspell.json  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  .releaserc.json  AGENTS.md  Anforderung.md  Anforderung_Installer.md  CHANGELOG.md  Deployment-Prozess.md  GITHUB_ISSUES.md  LICENSE  MOUSE_WHEEL_README.md  PR_DESCRIPTION.md  README.md  WINDOWS_INSTALLATION_FIX.md  Workflow-Testplan.md  bootstrap_installer.nsi  bootstrap_installer.py  build.py  catalog-info.yaml  export.json  installer.nsi  log_21306589748.txt  main_exe.py  mkdocs.yml  package.json  pyproject.toml  pytest.ini  requirements.txt  run_log.txt  test_hotkey.py  test_mouse_integration.py  test_start.py  version.py
.github/: dependabot.yml
.github/workflows/: build-and-deploy-optimized.yml  build-and-deploy.yml  dashboard-sync.yml  ecosystem-guard.yml  release.yml  test-workflow.yml
Documentation/: audio_optimization.md  local_transcription.md
artifacts_21306589748/voice-transcriber-builds-1.9.0/: build_info.txt
artifacts_21306957833/voice-transcriber-builds-1.9.1/: build_info.txt  version_info.json
assets/: VoiceTranscriber.manifest  icon_generator.py
docs/: AGENTS.md  Anforderung.md  Anforderung_Installer.md  BUG_BOOTSTRAP_DOUBLE_INSTALL.md  Build-Prozess-Verbesserungen.md  CHANGELOG.md  CHANGELOG.txt  Deployment-Prozess.md  GITHUB_ISSUES.md  GitHub-Actions-Fehleranalyse.md  IMPROVEMENT_IDEAS.md  POETRY_MIGRATION.md  PR_DESCRIPTION.md  README.md  Versionsbereinigungs-Plan.md  Versionschaos.md  Workflow-Testplan.md  audio_optimization.md  index.md  openai.md  pyaudio.md  pystray.md
docs/02-implementation/: build-system-learnings.md
scripts/: README.md  mouse_toggle.ahk
src/: __init__.py  __main__.py  audio_recorder.py  clipboard_injector.py  config.py  downloader.py  encryption.py  exceptions.py  hotkey_listener.py  local_transcription.py  main.py  model_manager.py  mouse_integration.py  notification.py  settings_gui.py  text_processor.py  transcription.py  user_config.py  version_manager.py
tests/: test_audio_recorder.py  test_config.py  test_exceptions.py  test_integration.py  test_local_transcription.py  test_main_error_handling.py  test_notification.py
tests/test_data/: generate_test_audio.py
tools/: bootstrap_installer.nsi  build.py  create_github_issues.py  deploy_to_r2.py  installer.nsi  main_exe.py  version_manager.py
