[tool.poetry]
name = "speechering"
version = "1.9.0"  # Managed by semantic-release
description = "Professional Windows Desktop Voice-to-Text Transcription with AI Support"
authors = ["Quievreux"]
readme = "docs/README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Core Dependencies
pystray = "^0.19.5"
pillow = "^11.0.0"
keyboard = "^0.13.5"
pyaudio = "^0.2.14"
openai = "^1.58.1"
pyperclip = "^1.9.0"
pyautogui = "^0.9.54"
python-dotenv = "^1.0.1"
pydub = "^0.25.1"
audioop-lts = { version = "^0.2.1", markers = "python_version >= '3.13'" }

# AI/ML Dependencies (Optional)
faster-whisper = {version = "*", optional = true}
ctranslate2 = {version = "*", optional = true} 
torch = {version = "*", source = "pytorch-cpu", optional = true}
numpy = {version = "*", optional = true}
huggingface-hub = {version = "*", optional = true}

# Windows-specific
win10toast = {version = "^0.9", markers = "platform_system == 'Windows'"}

# Deployment
boto3 = "^1.42.34"

[tool.poetry.extras]
ai = ["faster-whisper", "ctranslate2", "torch", "numpy", "huggingface-hub"]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
# Code Quality
black = "^23.0.0"
ruff = "^0.14.14"
isort = "^5.13.0"

# Testing
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

# Type Checking (optional)
mypy = "^1.0.0"

# Utilities
watchdog = "^3.0.0"

# Legacy (to be replaced by ruff)
pylint = "^3.0.0"
pytest-xdist = "^3.8.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.0.0"

[tool.poetry.scripts]
speechering = "src.main:main"
voice-transcriber = "src.main:main"

# ====================================
# Code Quality Configuration
# ====================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "C4",   # comprehensions
    "UP",   # pyupgrade
    "SIM",  # simplify
]
ignore = [
    "E501",  # Line too long (black handles this)
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
ignore_missing_imports = true  # For untyped dependencies

# Strict mode for new code
[[tool.mypy.overrides]]
module = "src.new_module"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = """
    -v
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --cov-fail-under=70
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ====================================
# Build System
# ====================================

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ====================================
# PyInstaller Configuration Reference
# ====================================
# Build with: poetry run python tools/build.py
# See: build.spec for PyInstaller configuration
